@@ -46,7 +46,9 @@ Py_ssize_t slp_from_tuple_with_nulls(PyObject **start, PyObject *tup);
 
 /* flags */
 #define SLP_PICKLEFLAGS_PRESERVE_TRACING_STATE (1U)
-#define SLP_PICKLEFLAGS__MAX_VALUE             ((1<<1)-1) /* must be a signed value */
+#define SLP_PICKLEFLAGS_PRESERVE_AG_FINALIZER  (1U<<1)
+#define SLP_PICKLEFLAGS_RESET_AG_FINALIZER     (1U<<2)
+#define SLP_PICKLEFLAGS__MAX_VALUE             ((1<<3)-1) /* must be a signed value */
 
 /* helper functions for module dicts */
 
